--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@nextui-org/avatar": "^2.0.33",
     "@nextui-org/button": "2.0.38",
     "@nextui-org/code": "2.0.33",
-    "@nextui-org/dropdown": "^2.1.31",
+    "@nextui-org/dropdown": "^2.3.7",
     "@nextui-org/input": "2.2.5",
     "@nextui-org/kbd": "2.0.34",
     "@nextui-org/link": "2.0.35",
     "@nextui-org/listbox": "2.1.27",
     "@nextui-org/modal": "^2.0.41",
-    "@nextui-org/navbar": "2.0.37",
+    "@nextui-org/navbar": "^2.2.5",
     "@nextui-org/select": "^2.2.7",
     "@nextui-org/snippet": "2.0.43",
     "@nextui-org/spinner": "^2.0.34",
