--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@nextui-org/spinner": "^2.0.34",
     "@nextui-org/switch": "2.0.34",
     "@nextui-org/system": "2.2.6",
-    "@nextui-org/theme": "2.2.11",
+    "@nextui-org/theme": "^2.4.3",
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
     "@reduxjs/toolkit": "^2.4.0",
